--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "source.fixAll.eslint": true
   },
   "eslint.validate": ["javascript"],
-  "cSpell.words": ["iconoir"]
+  "cSpell.words": ["iconoir", "jpegtran"]
 }
